--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "ai-newsletter",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "dev": "next dev -p 3002",
     "api:dev": ".venv/bin/uvicorn api.index:app --host 127.0.0.1 --port 8000 --reload",
