--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,5 @@
 {
-  "version": 2,
-  "functions": {
-    "api/**/*.py": {
-      "runtime": "python@3.11",
-      "maxDuration": 10
-    }
-  }
+  "version": 2
 }
 
 
