--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,16 @@
 {
-  "version": 2
+  "version": 2,
+  "functions": {
+    "api/index.py": {
+      "runtime": "python3.11"
+    }
+  },
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/index.py"
+    }
+  ]
 }
 
 
