--- a/requirements.txt
+++ b/requirements.txt
@@ -101,6 +101,10 @@ jinja2==3.1.6 \
     --hash=sha256:0137fb05990d35f1275a587e9aee6d56da821fc83491a0fb838183be43f66d6d \
     --hash=sha256:85ece4451f492d0c13c5dd7c13a64681a86afae63a5f347908daf103ce6d2f67
     # via fastapi
+mangum==0.18.0 \
+    --hash=sha256:50179395012d9ae3df30484c16280decf0c56fb4c76bd6e1979b9b60135f254f \
+    --hash=sha256:cf71aa89bd655d465ece62c9c336be6b537eb297cfc72f7ea463aabc5eda2e6a
+    # via ai-newsletter
 markdown-it-py==3.0.0 \
     --hash=sha256:355216845c60bd96232cd8d8c40e8f9765cc86f46880e43a8fd22dc1a1a8cab1 \
     --hash=sha256:e3f60a94fa066dc52ec76661e37c851cb232d92f9886b15cb560aaada2df8feb
@@ -309,6 +313,7 @@ typing-extensions==4.14.1 \
     # via
     #   anyio
     #   fastapi
+    #   mangum
     #   openai
     #   pydantic
     #   pydantic-core
@@ -440,7 +445,3 @@ websockets==15.0.1 \
     --hash=sha256:f7a866fbc1e97b5c617ee4116daaa09b722101d4a3c170c787450ba409f9736f \
     --hash=sha256:fcd5cf9e305d7b8338754470cf69cf81f420459dbae8a3b40cee57417f4614a7
     # via uvicorn
-mangum==0.18.0 \
-    --hash=sha256:9b7f5c28fe85b43b8ff32d0b6b6e2ae97ba0ddff31426a73e3833b5c5d1bb967 \
-    --hash=sha256:ab3c5077da31e7ad8ec0cb1ab68e8a62d5d97012e12b1d7a65ea5b6ab04e0a6e
-    # via ai-newsletter
