--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,5 @@
 {
-  "version": 2,
-  "functions": {
-    "api/index.py": {
-      "runtime": "python@3.11"
-    }
-  },
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/index.py"
-    }
-  ]
+  "version": 2
 }
 
 
