--- a/package.json
+++ b/package.json
@@ -15,20 +15,19 @@
     "gen:req": "sh scripts/gen_requirements.sh"
   },
   "dependencies": {
+    "classnames": "2.5.1",
     "next": "14.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "classnames": "2.5.1"
+    "serverless-python-requirements": "^6.1.2"
   },
   "devDependencies": {
+    "@types/node": "20.14.12",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.19",
     "postcss": "8.4.39",
     "tailwindcss": "3.4.7",
-    "typescript": "5.5.3",
-    "@types/node": "20.14.12",
-    "@types/react": "18.3.3",
-    "@types/react-dom": "18.3.0"
+    "typescript": "5.5.3"
   }
 }
-
-
