Temporarily move backend files to force Railway frontend detection

--- a/.railwayignore
+++ b/.railwayignore
@@ -1,15 +1,12 @@
-node_modules/
-.next/
-package.json
-package-lock.json
-pnpm-lock.yaml
-next.config.js
-tailwind.config.ts
-postcss.config.js
-tsconfig.json
-app/
-components/
-public/
-.vercel/
-.github/
-.serverless/
+api/
+*.py
+requirements.txt
+pyproject.toml
+Procfile
+.venv/
+uv.lock
+scripts/
+samconfig.toml
+serverless.yml
+template.yaml
+vercel.json
