--- a/package.json
+++ b/package.json
@@ -3,23 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "20.x"
+    "node": "18.x"
   },
   "scripts": {
     "dev": "next dev -p 3002",
-    "api:dev": ".venv/bin/uvicorn api.main:app --host 127.0.0.1 --port 8001 --reload",
-    "prebuild": "sh scripts/gen_requirements.sh",
     "build": "next build",
-    "start": "next start -p 3000",
-    "lint": "next lint",
-    "gen:req": "sh scripts/gen_requirements.sh"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "classnames": "2.5.1",
     "next": "14.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "serverless-python-requirements": "^6.1.2"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "20.14.12",
