--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "ai-newsletter",
+  "name": "ai-newsletter-frontend",
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "18.x"
+    "node": "18.x",
+    "npm": ">=8.0.0"
   },
   "scripts": {
     "dev": "next dev -p 3002",
     "build": "next build",
-    "start": "next start -p $PORT",
+    "start": "node start.js",
+    "start:next": "next start -p $PORT",
     "lint": "next lint"
   },
   "dependencies": {
